--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>SCSS</title>
 </head>
 <body>
+    <a href="#">link</a>
     <h1>Lorem ipsum dolor sit.</h1>
     <script src="js/scripts.js"></script>
 </body>
