--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <title>SCSS</title>
 </head>
 <body>
-    <a href="#">link</a>
-    <h1>Lorem ipsum dolor sit.</h1>
+    <div class="container">
+        <div class="row">
+            <p class="col col--md50 col--lg25">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A corrupti, magni quae vel voluptatem qui architecto. Temporibus, saepe at fuga amet ratione ab tempora aut. Consequatur a fuga quibusdam nobis sequi, reiciendis, debitis non exercitationem dolor hic sint amet odit.</p>
+            <p class="col col--md50 col--lg25">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A corrupti, magni quae vel voluptatem qui architecto. Temporibus, saepe at fuga amet ratione ab tempora aut. Consequatur a fuga quibusdam nobis sequi, reiciendis, debitis non exercitationem dolor hic sint amet odit.</p>
+            <p class="col col--md50 col--lg25">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A corrupti, magni quae vel voluptatem qui architecto. Temporibus, saepe at fuga amet ratione ab tempora aut. Consequatur a fuga quibusdam nobis sequi, reiciendis, debitis non exercitationem dolor hic sint amet odit.</p>
+            <p class="col col--md50 col--lg25">Lorem, ipsum dolor sit amet consectetur adipisicing elit. A corrupti, magni quae vel voluptatem qui architecto. Temporibus, saepe at fuga amet ratione ab tempora aut. Consequatur a fuga quibusdam nobis sequi, reiciendis, debitis non exercitationem dolor hic sint amet odit.</p>
+        </div>        
+    </div>
     <script src="js/scripts.js"></script>
 </body>
 </html>
