--- a/index.html
+++ b/index.html
@@ -12,15 +12,50 @@
         <div class="site-header__blackout blackout"></div>
         <nav>
             <ul class="site-header__nav nav">
-                <li class="nav__item"><a class="nav__link" href="#">Start</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Menu</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Lokalizacja</a></li>
-                <li class="nav__item"><a class="nav__link" href="#">Kontakt</a></li>
+                <li class="nav__item"><a class="nav__link" href="#start">Start</a></li>
+                <li class="nav__item"><a class="nav__link" href="#menu">Menu</a></li>
+                <li class="nav__item"><a class="nav__link" href="#localization">Lokalizacja</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contact">Kontakt</a></li>
             </ul>
         </nav>
         <h1 class="site-header__h1 heading--h1">Restauracja Dolce Vita Kraków</h1>
         <a class="site-header__button btn btn--red btn--circle" href="#">Menu</a>
     </header>
+    <main>
+        <section class="site-section" id="start">
+            <h2 class="heading--h2">Start</h2>
+            <div class="container">
+                <div class="row">
+                    <p class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sapiente perspiciatis esse nam eos dignissimos atque nihil aliquid quam! Beatae, porro ducimus sequi deserunt eum tempora ad fuga necessitatibus. Quas nisi doloribus, voluptates explicabo officia voluptas ea consectetur aliquid nemo, in soluta quasi, tenetur minus blanditiis quos inventore ipsa quisquam praesentium ipsam quidem! Vitae, porro esse? Iste ex hic quis enim omnis totam quasi libero, modi eaque nisi, ut architecto? Sed maiores aspernatur, aliquam itaque quas placeat! Optio temporibus quod porro at nobis modi natus animi illo. Maiores accusamus repellat, sed error hic ullam rem consectetur id deleniti alias temporibus itaque reiciendis quis, iusto, perferendis reprehenderit mollitia exercitationem aspernatur ipsum dolor. Repellat, unde ex consequuntur illo aperiam fugit optio quam tempora vitae! Totam eaque incidunt eveniet, quae labore, autem quas aspernatur rem modi tempore itaque quos. Suscipit asperiores accusamus dolore sunt quis nulla non id, aliquid exercitationem iste dicta nostrum corrupti vel laborum excepturi. Suscipit commodi reiciendis praesentium in doloribus nesciunt perferendis saepe laborum. Vitae quam sequi fuga omnis expedita pariatur perspiciatis officiis provident tenetur minus voluptatum, ipsa molestiae ipsam libero fugit aliquam neque minima quibusdam iusto aspernatur commodi. Earum voluptatem rerum totam veniam! Harum dolorum modi quod doloremque non.</p>
+                </div>
+            </div>
+        </section>
+        <section class="site-section" id="menu">
+            <h2 class="heading--h2">Menu</h2>
+        </section>
+        <section class="site-section" id="localization">
+            <h2 class="heading--h2">Lokalizacja</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2561.1219166082724!2d19.9425896156837!3d50.065278379424086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b107de836c9%3A0x13bf250c3e6d5faf!2sPawia%206%2C%2031-154%20Krak%C3%B3w!5e0!3m2!1spl!2spl!4v1643832142256!5m2!1spl!2spl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="site-section" id="contact">
+            <h2 class="heading--h2">Kontakt</h2>
+        </section>
+    </main>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
+                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
+                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
+            </div>
+        </div>
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
