--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Restauracja Dolce Vita Kraków</title>
+    <title>Codewise Kraków</title>
 </head>
 <body>
     <header class="site-header">
@@ -13,49 +13,133 @@
         <nav>
             <ul class="site-header__nav nav">
                 <li class="nav__item"><a class="nav__link" href="#start">Start</a></li>
-                <li class="nav__item"><a class="nav__link" href="#menu">Menu</a></li>
-                <li class="nav__item"><a class="nav__link" href="#localization">Lokalizacja</a></li>
-                <li class="nav__item"><a class="nav__link" href="#contact">Kontakt</a></li>
+                <li class="nav__item"><a class="nav__link" href="#menu">About us</a></li>
+                <li class="nav__item"><a class="nav__link" href="#localization">Localization</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <h1 class="site-header__h1 heading--h1">Restauracja Dolce Vita Kraków</h1>
-        <a class="site-header__button btn btn--red btn--circle" href="#">Menu</a>
+        <h1 class="site-header__h1 heading--h1">Codewise</h1>
+        <a class="site-header__button btn btn--grey btn--circle" href="https://codewise.com/">Our site</a>
     </header>
     <main>
-        <section class="site-section" id="start">
-            <h2 class="heading--h2">Start</h2>
+        <section class="site-section site-section__start" id="start">
+            <h2 class="heading--h2">What is Codewise?</h2>
+            <img class="logo site-section__logo" src="../assets/img/logo.jpg" alt="logo">
             <div class="container">
                 <div class="row">
-                    <p class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sapiente perspiciatis esse nam eos dignissimos atque nihil aliquid quam! Beatae, porro ducimus sequi deserunt eum tempora ad fuga necessitatibus. Quas nisi doloribus, voluptates explicabo officia voluptas ea consectetur aliquid nemo, in soluta quasi, tenetur minus blanditiis quos inventore ipsa quisquam praesentium ipsam quidem! Vitae, porro esse? Iste ex hic quis enim omnis totam quasi libero, modi eaque nisi, ut architecto? Sed maiores aspernatur, aliquam itaque quas placeat! Optio temporibus quod porro at nobis modi natus animi illo. Maiores accusamus repellat, sed error hic ullam rem consectetur id deleniti alias temporibus itaque reiciendis quis, iusto, perferendis reprehenderit mollitia exercitationem aspernatur ipsum dolor. Repellat, unde ex consequuntur illo aperiam fugit optio quam tempora vitae! Totam eaque incidunt eveniet, quae labore, autem quas aspernatur rem modi tempore itaque quos. Suscipit asperiores accusamus dolore sunt quis nulla non id, aliquid exercitationem iste dicta nostrum corrupti vel laborum excepturi. Suscipit commodi reiciendis praesentium in doloribus nesciunt perferendis saepe laborum. Vitae quam sequi fuga omnis expedita pariatur perspiciatis officiis provident tenetur minus voluptatum, ipsa molestiae ipsam libero fugit aliquam neque minima quibusdam iusto aspernatur commodi. Earum voluptatem rerum totam veniam! Harum dolorum modi quod doloremque non.</p>
+                    <p class="col col__p paragraph" >We started out in 2010 in Kraków, Poland with the goal to  <br>
+                        create custom software for our founder, an independent <br>
+                        digital marketer. </p>
+
+                        <p class="col col__p paragraph" >   Exceeding even his expectations, our products quickly <br>
+                            became popular among thousands of affiliate marketers <br>
+                            & performance advertising agencies. </p>
+                        
+                            <p class="col col__p paragraph" > Today, we pride ourselves with providing industry-leading <br>
+                                tools, support and education to our clients around the globe. <br>
+                                And we enjoy every minute of it!</p>
+                        
                 </div>
             </div>
         </section>
-        <section class="site-section" id="menu">
-            <h2 class="heading--h2">Menu</h2>
-        </section>
-        <section class="site-section" id="localization">
-            <h2 class="heading--h2">Lokalizacja</h2>
+        <section class="site-section site-section__menu" id="menu">
+            <h2 class="heading--h2 text-color-white heading--h2__about">About us</h2>
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2561.1219166082724!2d19.9425896156837!3d50.065278379424086!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b107de836c9%3A0x13bf250c3e6d5faf!2sPawia%206%2C%2031-154%20Krak%C3%B3w!5e0!3m2!1spl!2spl!4v1643832142256!5m2!1spl!2spl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image"></div>
+                            <div class="image-box__text">Office</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image image-box__image--next"></div>
+                            <div class="image-box__text">Manager</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image image-box__image--next2"></div>
+                            <div class="image-box__text">Meeting</div>
+                        </div>
+                    </div>
+                    <div class="col col--md50 col--lg25">
+                        <div class="image-box">
+                            <div class="image-box__image image-box__image--next3"></div>
+                            <div class="image-box__text">Lunch</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="site-section" id="contact">
-            <h2 class="heading--h2">Kontakt</h2>
+        <section class="site-section" id="localization">
+            <h2 class="heading--h2">Localization</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col col__map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1280.5906792976689!2d19.946942758313675!3d50.064165116645185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b174325b941%3A0xef90249ac933b313!2sCodewise!5e0!3m2!1spl!2spl!4v1649789129795!5m2!1spl!2spl" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="site-section site-section__contact" id="contact">
+            <h2 class="heading--h2">Contact</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col col__form">
+                        <form class="form site-contact__form">
+                            <label class="form__label" for="mail">Your email address</label>
+                            <input class="form__item" id="mail">
+                            <label class="form__label" for="subject">Subject</label>
+                            <input class="form__item" id="subject">
+                            <label class="form__label" for="message">Message</label>
+                            <textarea class="form__item" id="message" cols="15" rows="5"></textarea>
+                            <input class="form__item" class="btn btn--outline" type="submit" value="Send">
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="site-footer">
         <div class="container">
             <div class="row">
-                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
-                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
-                <p class="col col--md33">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi, perferendis.</p>
+                <p class="col col--md33">
+                    OFFICE <br> <br> 
+                    ul. Lubicz 17G <br>
+                    31-503 Kraków, Poland</p>
+                    <p class="col col--md33">
+                        CAREERS <br> <br>
+                        We’re looking for talented, passionate folks <br>
+                        to join our team. <br>
+                        <a class="site-footer site-footer__links" href="https://codewise.com/careers/">Explore careers →</a>
+                    </p>
+                    <p class="col col--md33">
+                        FOLLOW <br> <br>
+                        <a class="site-footer site-footer__links" href="https://www.facebook.com/codewise/">Facebook</a> <br>
+                        <a class="site-footer site-footer__links" href="https://www.instagram.com/codewisecom/">Instagram</a> <br>
+                        <a class="site-footer site-footer__links" href="https://www.linkedin.com/company/codewisecom/">LinkedIn</a> 
+                    </p>
+                </div>
             </div>
-        </div>
-    </footer>
-    <script src="js/scripts.js"></script>
-</body>
+        </footer>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
+    <!-- <h2 class="heading--h2">About us</h2>
+    <div class="container">
+        <div class="row">
+    <p class="col col__p paragraph">Software engineers, web developers, UX designers, <br>
+         project managers, marketing & accounting specialists… <br>
+         Since we were founded, our greatest pride <br>
+         has always been our team.  </p>
+
+         <p class="col col__p paragraph">
+             We hire the best. And we make sure they know this <br>
+             is how we feel about them. Click on the button below and learn <br>
+             about our unique code of work, the multitude of <br>
+             perks & benefits we offer, and… if we’re currently <br>
+             looking for someone like you!</p>
+    </div>  
+        </div>        -->
